Serialize and deserialize HTTP messages. Examples taken from a running Jinaga.js application to ensure compatibility.

--- a/Jinaga.Test/Jinaga.Test.csproj
+++ b/Jinaga.Test/Jinaga.Test.csproj
@@ -11,9 +11,14 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Http\" />
+    <Folder Include="Records\" />
   </ItemGroup>
 </Project>
