--- a/Jinaga.Test/Jinaga.Test.csproj
+++ b/Jinaga.Test/Jinaga.Test.csproj
@@ -16,5 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
+    <ProjectReference Include="..\Jinaga.UnitTest\Jinaga.UnitTest.csproj" />
   </ItemGroup>
 </Project>
