--- a/Jinaga/Jinaga.csproj
+++ b/Jinaga/Jinaga.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
