Render facts as a graph by shelling out to dot.

--- a/Jinaga.Graphviz/Jinaga.Graphviz.csproj
+++ b/Jinaga.Graphviz/Jinaga.Graphviz.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
+    <ProjectReference Include="..\Jinaga.UnitTest\Jinaga.UnitTest.csproj" />
   </ItemGroup>
 
   <ItemGroup>
