--- a/Jinaga/Jinaga.csproj
+++ b/Jinaga/Jinaga.csproj
@@ -4,6 +4,26 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <nullable>enable</nullable> 
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+
+    <PackageId>Jinaga</PackageId>
+    <Version>0.1.0</Version>
+    <Authors>Michael L Perry</Authors>
+    <Company>Jinaga LLC</Company>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>Copyright (c) 2021 Michael L Perry</Copyright>
+    <ProjectUrl>https://jinaga.net</ProjectUrl>
+    <RepositoryUrl>https://github.com/jinaga/jinaga.net</RepositoryUrl>
+    <PackageTags>Data;Synchronization;Offline;Occasionally connected</PackageTags>
+    <Description>
+      Jinaga is a data synchronization library that supports offline access to data.
+      It is designed to be used in a variety of scenarios, including:
+      - Synchronizing data between devices
+      - Synchronizing data between applications
+      - Synchronizing data between applications and devices
+      - Synchronizing data between applications and servers
+      - Synchronizing data between servers
+      - Synchronizing data between servers and devices
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
