--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,15 +13,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: "0"
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build Jinaga
-      run: dotnet build Jinaga --no-restore
-    - name: Build Jinaga.Test
-      run: dotnet build Jinaga.Test --no-restore
+    - name: Build
+      run: |
+        dotnet build Jinaga --no-restore
+        dotnet build Jinaga.UnitTest --no-restore
+        dotnet build Jinaga.Test --no-restore
+        dotnet build Jinaga.Graphviz --no-restore
     - name: Test
       run: dotnet test Jinaga.Test --no-build --verbosity normal
+    - name: Pack
+      run: |
+        dotnet pack ./Jinaga/ -c Release -p:PublicRelease=true -o ./packages
+        dotnet pack ./Jinaga.UnitTest/ -c Release -p:PublicRelease=true -o ./packages
+        dotnet pack ./Jinaga.Graphviz/ -c Release -p:PublicRelease=true -o ./packages
+    - name: Publish Nuget to GitHub registry
+      run: dotnet nuget push ./packages/*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/jinaga/index.json --skip-duplicate --no-symbols 
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
