Run NuGet pack only on push to main

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: "Build and Test"
 
 on:
   push:
@@ -13,8 +13,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: "0"
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
@@ -29,12 +27,3 @@ jobs:
         dotnet build Jinaga.Graphviz --no-restore
     - name: Test
       run: dotnet test Jinaga.Test --no-build --verbosity normal
-    - name: Pack
-      run: |
-        dotnet pack ./Jinaga/ -c Release -p:PublicRelease=true -o ./packages
-        dotnet pack ./Jinaga.UnitTest/ -c Release -p:PublicRelease=true -o ./packages
-        dotnet pack ./Jinaga.Graphviz/ -c Release -p:PublicRelease=true -o ./packages
-    - name: Publish Nuget to GitHub registry
-      run: dotnet nuget push ./packages/*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/jinaga/index.json --skip-duplicate --no-symbols true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
