Add db-creation & connection  infra

--- a/Jinaga.Test/Jinaga.Test.csproj
+++ b/Jinaga.Test/Jinaga.Test.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Jinaga.Store.SQLite\Jinaga.Store.SQLite.csproj" />
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
     <ProjectReference Include="..\Jinaga.UnitTest\Jinaga.UnitTest.csproj" />
   </ItemGroup>
