--- a/Jinaga.Store.SQLite/Jinaga.Store.SQLite.csproj
+++ b/Jinaga.Store.SQLite/Jinaga.Store.SQLite.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
   </ItemGroup>
 
@@ -16,6 +12,10 @@
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>Jinaga.Test</_Parameter1>
     </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.0.7" />
   </ItemGroup>
 
 </Project>
