--- a/Jinaga.Store.SQLite/Jinaga.Store.SQLite.csproj
+++ b/Jinaga.Store.SQLite/Jinaga.Store.SQLite.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.0.7" />
+    <PackageReference Include="System.Text.Json" Version="6.0.5" />
   </ItemGroup>
 
 </Project>
