--- a/.github/workflows/release-number.yml
+++ b/.github/workflows/release-number.yml
@@ -3,6 +3,8 @@ name: "Test release number"
 on:
   push:
     branches: [ build-number ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
