--- a/.github/workflows/release-number.yml
+++ b/.github/workflows/release-number.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Get release number from GitHub
       id: get_release_number
       run: |
-        echo {{ github.event.release.tag_name }}
+        echo ${{ github.event.release.tag_name }}
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
