--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -18,13 +18,16 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Pack
+      env:
+        RELEASE_NUMBER: ${{ github.event.release.tag_name }}
       run: |
-        dotnet pack ./Jinaga/ -c Release -p:PublicRelease=true -o ./packages
-        dotnet pack ./Jinaga.UnitTest/ -c Release -p:PublicRelease=true -o ./packages
-        dotnet pack ./Jinaga.Graphviz/ -c Release -p:PublicRelease=true -o ./packages
-    - name: Publish Nuget to GitHub registry
-      run: dotnet nuget push ./packages/*.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols true
+        echo "Release: $RELEASE_NUMBER"
+        dotnet pack ./Jinaga/ -c Release -p:PackageVersion=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
+        dotnet pack ./Jinaga.UnitTest/ -c Release -p:PackageVersion=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
+        dotnet pack ./Jinaga.Graphviz/ -c Release -p:PackageVersion=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
+    # - name: Publish Nuget to GitHub registry
+    #   run: dotnet nuget push ./packages/*.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols true
