--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -26,8 +26,8 @@ jobs:
         RELEASE_NUMBER: ${{ github.event.release.tag_name }}
       run: |
         echo "Release: $RELEASE_NUMBER"
-        dotnet pack ./Jinaga/ -c Release -p:PackageVersion=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
-        dotnet pack ./Jinaga.UnitTest/ -c Release -p:PackageVersion=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
-        dotnet pack ./Jinaga.Graphviz/ -c Release -p:PackageVersion=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
+        dotnet pack ./Jinaga/ -c Release -p:VersionPrefix=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
+        dotnet pack ./Jinaga.UnitTest/ -c Release -p:VersionPrefix=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
+        dotnet pack ./Jinaga.Graphviz/ -c Release -p:VersionPrefix=$RELEASE_NUMBER -p:PublicRelease=true -o ./packages
     # - name: Publish Nuget to GitHub registry
     #   run: dotnet nuget push ./packages/*.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols true
