--- a/Jinaga.Graphviz/Jinaga.Graphviz.csproj
+++ b/Jinaga.Graphviz/Jinaga.Graphviz.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="1.0.2" />
+    <PackageReference Include="MinVer" Version="4.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <PropertyGroup>
@@ -33,6 +37,10 @@
       - Synchronizing data between servers
       - Synchronizing data between servers and devices
     </Description>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
 </Project>
