--- a/Jinaga.UnitTest/Jinaga.UnitTest.csproj
+++ b/Jinaga.UnitTest/Jinaga.UnitTest.csproj
@@ -11,6 +11,10 @@
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
 
@@ -22,6 +26,7 @@
     <ProjectUrl>https://jinaga.net</ProjectUrl>
     <RepositoryUrl>https://github.com/jinaga/jinaga.net</RepositoryUrl>
     <PackageTags>Data;Synchronization;Offline;Occasionally connected</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <Description>
       Support for unit testing Jinaga applications.
 
