--- a/Jinaga/Jinaga.csproj
+++ b/Jinaga/Jinaga.csproj
@@ -13,6 +13,7 @@
     <ProjectUrl>https://jinaga.net</ProjectUrl>
     <RepositoryUrl>https://github.com/jinaga/jinaga.net</RepositoryUrl>
     <PackageTags>Data;Synchronization;Offline;Occasionally connected</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <Description>
       Jinaga is a data synchronization library that supports offline access to data.
       It is designed to be used in a variety of scenarios, including:
@@ -33,6 +34,10 @@
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
     <_Parameter1>Jinaga.Test</_Parameter1>
     </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
   <ItemGroup>
