--- a/Jinaga.Store.SQLite.Test/Jinaga.Store.SQLite.Test.csproj
+++ b/Jinaga.Store.SQLite.Test/Jinaga.Store.SQLite.Test.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.5.119" />
+  </ItemGroup>
+
 </Project>
