--- a/Jinaga.Store.SQLite.Test/Jinaga.Store.SQLite.Test.csproj
+++ b/Jinaga.Store.SQLite.Test/Jinaga.Store.SQLite.Test.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Jinaga.Store.SQLite\Jinaga.Store.SQLite.csproj" />
+    <ProjectReference Include="..\Jinaga.UnitTest\Jinaga.UnitTest.csproj" />
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
   </ItemGroup>
 
