--- a/Jinaga.Tool/Jinaga.Tool.csproj
+++ b/Jinaga.Tool/Jinaga.Tool.csproj
@@ -1,13 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<PackAsTool>true</PackAsTool>
-	<ToolCommandName>jinaga</ToolCommandName>
-	<PackageOutputPath>./nupkg</PackageOutputPath>
+
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>dotnet-jinaga</ToolCommandName>
+
+    <PackageId>Jinaga.Tool</PackageId>
+    <Authors>Michael L Perry</Authors>
+    <Company>Jinaga LLC</Company>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>Copyright (c) 2023 Michael L Perry</Copyright>
+    <ProjectUrl>https://jinaga.net</ProjectUrl>
+    <RepositoryUrl>https://github.com/jinaga/jinaga.net</RepositoryUrl>
+    <PackageTags>Data;Synchronization;Offline;Occasionally connected</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Description>
+      Manage Jinaga replicators.
+      Deploy authorization and distribution rules.
+    </Description>
   </PropertyGroup>
+
+  <ItemGroup>
+      <None Include="README.md" Pack="true" PackagePath=""/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.5.119" />
+  </ItemGroup>
 
 </Project>
