--- a/Jinaga.Tool/Jinaga.Tool.csproj
+++ b/Jinaga.Tool/Jinaga.Tool.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyVersion>0.6.0.0</AssemblyVersion>
+    <FileVersion>0.6.0.0</FileVersion>
 
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>dotnet-jinaga</ToolCommandName>
@@ -22,13 +24,11 @@
       Manage Jinaga replicators.
       Deploy authorization and distribution rules.
     </Description>
+    <PackageVersion>0.6.0.0</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
-      <None Include="README.md" Pack="true" PackagePath=""/>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="Nerdbank.GitVersioning" Version="3.5.119" />
+      <None Include="README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
