--- a/Jinaga.Graphviz/Jinaga.Graphviz.csproj
+++ b/Jinaga.Graphviz/Jinaga.Graphviz.csproj
@@ -26,6 +26,7 @@
     <PackageId>Jinaga.Graphviz</PackageId>
     <Authors>Michael L Perry</Authors>
     <Company>Jinaga LLC</Company>
+    <Icon>../JinagaIcon.png</Icon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright (c) 2023 Michael L Perry</Copyright>
     <ProjectUrl>https://jinaga.net</ProjectUrl>
