--- a/Jinaga.UnitTest/Jinaga.UnitTest.csproj
+++ b/Jinaga.UnitTest/Jinaga.UnitTest.csproj
@@ -25,6 +25,7 @@
     <PackageId>Jinaga.UnitTest</PackageId>
     <Authors>Michael L Perry</Authors>
     <Company>Jinaga LLC</Company>
+    <Icon>../JinagaIcon.png</Icon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright (c) 2023 Michael L Perry</Copyright>
     <ProjectUrl>https://jinaga.net</ProjectUrl>
