--- a/Jinaga.Store.SQLite/Jinaga.Store.SQLite.csproj
+++ b/Jinaga.Store.SQLite/Jinaga.Store.SQLite.csproj
@@ -6,6 +6,7 @@
     <PackageId>Jinaga.Store.SQLite</PackageId>
     <Authors>Michael L Perry, Jan Verhaegen</Authors>
     <Company>Jinaga LLC</Company>
+    <PackageIcon>JinagaIcon.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright (c) 2023 Michael L Perry</Copyright>
     <ProjectUrl>https://jinaga.net</ProjectUrl>
@@ -23,6 +24,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
+    <None Include="..\JinagaIcon.png"  Pack="True" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
