--- a/Jinaga.Tool/Jinaga.Tool.csproj
+++ b/Jinaga.Tool/Jinaga.Tool.csproj
@@ -14,7 +14,7 @@
     <PackageId>Jinaga.Tool</PackageId>
     <Authors>Michael L Perry</Authors>
     <Company>Jinaga LLC</Company>
-    <Icon>../JinagaIcon.png</Icon>
+    <PackageIcon>JinagaIcon.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright (c) 2023 Michael L Perry</Copyright>
     <ProjectUrl>https://jinaga.net</ProjectUrl>
@@ -30,6 +30,7 @@
 
   <ItemGroup>
       <None Include="README.md" Pack="true" PackagePath="" />
+    <None Include="..\JinagaIcon.png"  Pack="True" PackagePath="\" />
   </ItemGroup>
 
 </Project>
