--- a/Jinaga.Store.SQLite/Jinaga.Store.SQLite.csproj
+++ b/Jinaga.Store.SQLite/Jinaga.Store.SQLite.csproj
@@ -32,6 +32,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MinVer" Version="4.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.0.7" />
     <PackageReference Include="System.Text.Json" Version="6.0.7" />
   </ItemGroup>
