Build and deploy the SQLite package

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -28,5 +28,6 @@ jobs:
         dotnet build Jinaga.Test --no-restore
         dotnet build Jinaga.Graphviz --no-restore
         dotnet build Jinaga.Tool --no-restore
+        dotnet build Jinaga.Store.SQLite --no-restore
     - name: Test
       run: dotnet test Jinaga.Test --no-build --verbosity normal
