Ignore the NU5128 warning

--- a/Jinaga.SourceGenerator/Jinaga.SourceGenerator.csproj
+++ b/Jinaga.SourceGenerator/Jinaga.SourceGenerator.csproj
@@ -5,6 +5,7 @@
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <IsPackable>true</IsPackable>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <NoWarn>$(NoWarn);NU5128</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
