--- a/Jinaga/Jinaga.csproj
+++ b/Jinaga/Jinaga.csproj
@@ -45,7 +45,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jinaga.SourceGenerator\Jinaga.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="../Jinaga.SourceGenerator/Jinaga.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)'=='Debug'">
+    <None Include="../Jinaga.SourceGenerator/bin/Debug/netstandard2.0/Jinaga.SourceGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)'=='Release'">
+    <None Include="../Jinaga.SourceGenerator/bin/Release/netstandard2.0/Jinaga.SourceGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
 </Project>
