--- a/Jinaga.Maui/Jinaga.Maui.csproj
+++ b/Jinaga.Maui/Jinaga.Maui.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.139" />
+  </ItemGroup>
+
 </Project>
