Added MinVer package

--- a/Jinaga.Maui/Jinaga.Maui.csproj
+++ b/Jinaga.Maui/Jinaga.Maui.csproj
@@ -43,6 +43,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+		<PackageReference Include="MinVer" Version="5.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
