--- a/Jinaga.Notebooks/Jinaga.Notebooks.csproj
+++ b/Jinaga.Notebooks/Jinaga.Notebooks.csproj
@@ -1,23 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
+		<PackageReference Include="Jinaga" Version="1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="2.2.0" />
-    <PackageReference Include="MinVer" Version="5.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.139" />
   </ItemGroup>
 
   <PropertyGroup>
