--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: "0"
+        fetch-depth: 1  # Fetch only the latest commit
 
     - name: Setup .NET Core 8
       uses: actions/setup-dotnet@v4
