--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -34,6 +34,7 @@ jobs:
         dotnet pack ./Jinaga.Notebooks/ -c Release -o ./packages
         dotnet pack ./Jinaga.Store.SQLite/ -c Release -o ./packages
         dotnet pack ./Jinaga.Maui/ -c Release -o ./packages
+        dotnet pack ./Jinaga.Tool/ -c Release -o ./packages
 
     - name: Publish NuGet to GitHub Packages registry
       run: dotnet nuget push ./packages/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/Jinaga/index.json --skip-duplicate --no-symbols
