Replace package references with project references

--- a/Jinaga.Maui/Jinaga.Maui.csproj
+++ b/Jinaga.Maui/Jinaga.Maui.csproj
@@ -34,7 +34,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Jinaga" Version="1.*" />
+		<ProjectReference Include="..\Jinaga\Jinaga.csproj" />
 	</ItemGroup>
 
 </Project>
