--- a/Jinaga.Notebooks/Jinaga.Notebooks.csproj
+++ b/Jinaga.Notebooks/Jinaga.Notebooks.csproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-		<PackageReference Include="Jinaga" Version="1.*" />
+		<ProjectReference Include="..\Jinaga\Jinaga.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
