--- a/Jinaga.UnitTest/Jinaga.UnitTest.csproj
+++ b/Jinaga.UnitTest/Jinaga.UnitTest.csproj
@@ -27,7 +27,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-		<PackageReference Include="Jinaga" Version="1.*" />
+    <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
   </ItemGroup>
 
   <ItemGroup>
