--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -25,14 +25,19 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
 
+    - name: Clear packages folder
+      run: |
+        mkdir -p ./packages
+        rm -f ./packages/*
+
     - name: Pack
       run: |
-        dotnet pack ./Jinaga/ -c Release -o ./packages
-        dotnet pack ./Jinaga.UnitTest/ -c Release -o ./packages
-        dotnet pack ./Jinaga.Notebooks/ -c Release -o ./packages
-        dotnet pack ./Jinaga.Store.SQLite/ -c Release -o ./packages
-        dotnet pack ./Jinaga.Maui/ -c Release -o ./packages
-        dotnet pack ./Jinaga.Tool/ -c Release -o ./packages
+        dotnet pack ./Jinaga/ -c Release -o ./packages /p:IncludeSymbols=true /p:SymbolPackageFormat=snupkg
+        dotnet pack ./Jinaga.UnitTest/ -c Release -o ./packages /p:IncludeSymbols=true /p:SymbolPackageFormat=snupkg
+        dotnet pack ./Jinaga.Notebooks/ -c Release -o ./packages /p:IncludeSymbols=true /p:SymbolPackageFormat=snupkg
+        dotnet pack ./Jinaga.Store.SQLite/ -c Release -o ./packages /p:IncludeSymbols=true /p:SymbolPackageFormat=snupkg
+        dotnet pack ./Jinaga.Maui/ -c Release -o ./packages /p:IncludeSymbols=true /p:SymbolPackageFormat=snupkg
+        dotnet pack ./Jinaga.Tool/ -c Release -o ./packages /p:IncludeSymbols=true /p:SymbolPackageFormat=snupkg
 
     - name: Publish NuGet to GitHub Packages registry
-      run: dotnet nuget push ./packages/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/Jinaga/index.json --skip-duplicate --no-symbols
+      run: dotnet nuget push ./packages/*.nupkg ./packages/*.snupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/Jinaga/index.json --skip-duplicate
