Reproduce exception from issue

--- a/Jinaga.Test.FSharp/Jinaga.Test.FSharp.fsproj
+++ b/Jinaga.Test.FSharp/Jinaga.Test.FSharp.fsproj
@@ -20,4 +20,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
+  </ItemGroup>
+
 </Project>
