Add an FSharp project for specification processor

--- a/Jinaga.Test.FSharp/Jinaga.Test.FSharp.fsproj
+++ b/Jinaga.Test.FSharp/Jinaga.Test.FSharp.fsproj
@@ -18,4 +18,7 @@
     <ProjectReference Include="..\Jinaga\Jinaga.csproj" />
     <Compile Include="SpeficationTests.fs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Jinaga.FSharp\Jinaga.FSharp.fsproj" />
+  </ItemGroup>
 </Project>
