Test the F# specification processor using C#.

--- a/Jinaga.FSharp/Jinaga.FSharp.fsproj
+++ b/Jinaga.FSharp/Jinaga.FSharp.fsproj
@@ -6,5 +6,6 @@
   <ItemGroup>
     <ProjectReference Include="../Jinaga/Jinaga.csproj" />
     <Compile Include="SpecificationProcessor.fs" />
+    <Compile Include="Specification.fs" />
   </ItemGroup>
 </Project>
