Notebook extension to render a collection as a table

--- a/Jinaga.Notebooks/Jinaga.Notebooks.csproj
+++ b/Jinaga.Notebooks/Jinaga.Notebooks.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Data.Analysis" Version="0.22.0" />
   </ItemGroup>
 
   <ItemGroup>
